force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__Account__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax Exemption Certificates</relationshipLabel>
        <relationshipName>Tax_Exemption_Certificates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>