force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__CertificateNumber__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CertificateNumber__c</fullName>
        <label>Certificate Number</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>