force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__Country__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Country__c</fullName>
        <description>Optional - to track the company address associated to the certificate</description>
        <inlineHelpText>ptional - to track the company address associated to the certificate</inlineHelpText>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>