force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__County__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__County__c</fullName>
        <label>County</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>