force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__DateIssued__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DateIssued__c</fullName>
        <label>Date Issued</label>
        <type>Date</type>
    </CustomField>