force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__Default__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A certificate can be marked as default only if it is active</description>
        <inlineHelpText>A certificate can be marked as default only if it is active</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </CustomField>