force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__ExemptCompanyName__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ExemptCompanyName__c</fullName>
        <description>The company name or DBA name associated to the certificate</description>
        <inlineHelpText>The company name or DBA name associated to the certificate</inlineHelpText>
        <label>Exempt Company Name</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>