force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__ExpirationDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </CustomField>