force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__IssuingAuthority__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IssuingAuthority__c</fullName>
        <description>The authority, such as a government agency or country (for European organizations), that issued the certificate</description>
        <inlineHelpText>The authority, such as a government agency or country (for European organizations), that issued the certificate</inlineHelpText>
        <label>Issuing Authority</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>