force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__Notes__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </CustomField>