force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__PostalCode__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>