force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__State__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>