force-app/main/default/objects/SBQQ__TaxExemptionCertificate__c/fields/SBQQ__StreetAddress_2__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__StreetAddress_2__c</fullName>
        <label>Street Address_2</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>